changed department example to product example
